kubernetes/apps/production/media/shlink/client/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: urls-authentik-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`urls.${SECRET_DOMAIN}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: networking
      services:
        - kind: Service
          name: shlink-client
          namespace: media
          port: 8080
    - kind: Rule
      match: "Host(`urls.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
