kubernetes/apps/production/media/shlink/client/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-web-client
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-int
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "urls.${SECRET_DOMAIN}"
  rules:
    - host: *host
